# torchbp

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml
benchmarks/: benchmark_backprojection.py
docs/: Makefile
docs/source/: .gitignore  conf.py  index.rst  torchbp.rst
docs/source/examples/: afbp.ipynb  antenna_normalization.ipynb  antenna_pattern_ffbp.ipynb  backprojection.ipynb  cfbp.ipynb  dem_backprojection.ipynb  fc_choice.ipynb  ffbp.ipynb  gpga.ipynb  interferometry.ipynb  lazy_data.ipynb  pga.ipynb  polar_interp.ipynb  polarimetric_calibration.ipynb
examples/: Readme.md  sar_polar_to_cart.py  sar_process_safetensor.py  sar_process_safetensor_gpga.py
tests/: benchmark_backprojection.py  test_afbp.py  test_autofocus.py  test_backproj.py  test_cart_to_polar_pga.py  test_cfar.py  test_cfbp.py  test_coherence.py  test_correlation.py  test_entropy.py  test_ffbp.py  test_gpga_stripmap.py  test_polar_interp.py  test_polarimetry.py  test_resample.py  test_speckle_filter.py  test_torchbp.py  test_tx_power_dem.py  test_util.py  test_weighted_ffbp_dem.py
torchbp/: __init__.py  autofocus.py  data.py  grid.py  interferometry.py  ops.py  polarimetry.py  util.py
torchbp/csrc/: torchbp.cpp
torchbp/csrc/cpu/: afbp_fuse.cpp  backproj.cpp  cfbp_merge.cpp  coherence.cpp  polar_interp.cpp  resample.cpp  speckle_filter.cpp  (+2 more)
torchbp/ops/: __init__.py  _utils.py  afbp.py  backproj.py  cfar.py  cfbp.py  coherence.py  correlation.py  entropy.py  ffbp.py  multilook.py  ops.py  polar_interp.py  resample.py  speckle_filter.py
(+13 files in other folders)
